# matrix

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
crs/: CMakeLists.txt  lib.cpp  matrix.h
tests/: CMakeLists.txt  test_matrix.cpp  test_version.cpp
